Fix spelling mistakes in 4.1.0 branch

--- a/en/tools/config-catalog-generator-mi/data/configs.json
+++ b/en/tools/config-catalog-generator-mi/data/configs.json
@@ -29,14 +29,14 @@
                             "required": "false",
                             "default": "false",
                             "possible": "\"true\" or \"false\"",
-                            "description": "Use this paramater to enable MTOM (Message Transmission Optimization Mechanism) for the product server."
+                            "description": "Use this parameter to enable MTOM (Message Transmission Optimization Mechanism) for the product server."
                         },
                         {
                             "name": "enable_swa",
                             "type": "boolean",
                             "required": "false",
                             "default": "\"true\" or \"false\"",
-                            "description": "Use this paramater to enable SwA (SOAP with Attachments) for the product server. When SwA is enabled, the Micro Integrator will process the files attached to SOAP messages."
+                            "description": "Use this parameter to enable SwA (SOAP with Attachments) for the product server. When SwA is enabled, the Micro Integrator will process the files attached to SOAP messages."
                         },
                         {
                             "name": "userAgent",
@@ -867,7 +867,7 @@
                             "required": false,
                             "default": "0",
                             "possible": "-",
-                            "description": "Timeout value in seconds. Default value is 0. Similar to to the removeAbandonedTimeout value but instead of treating the connection as abandoned, and potentially closing the connection, this simply logs the warning if logAbandoned is set to true. If this value is equal or less than 0, no suspect checking will be performed. Suspect checking only takes place if the timeout value is larger than 0 and the connection was not abandoned or if abandon check is disabled. If a connection is suspect a WARN message gets logged and a JMX notification gets sent once."
+                            "description": "Timeout value in seconds. Default value is 0. Similar to the removeAbandonedTimeout value but instead of treating the connection as abandoned, and potentially closing the connection, this simply logs the warning if logAbandoned is set to true. If this value is equal or less than 0, no suspect checking will be performed. Suspect checking only takes place if the timeout value is larger than 0 and the connection was not abandoned or if abandon check is disabled. If a connection is suspect a WARN message gets logged and a JMX notification gets sent once."
                         }
                     ]
                 }
