--- a/en/docs/reference/product-apis/devportal-apis/devportal-v2/devportal-v2.yaml
+++ b/en/docs/reference/product-apis/devportal-apis/devportal-v2/devportal-v2.yaml
@@ -3151,9 +3151,9 @@ paths:
     get:
       tags:
         - Settings
-      summary: Retreive Devportal settings
+      summary: Retrieve Devportal settings
       description: |
-        Retreive Devportal Settings
+        Retrieve Devportal Settings
       parameters:
         - $ref: '#/components/parameters/requestedTenant'
       responses:
