--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -271,6 +271,8 @@ nav:
                   - Azure:
                     - Deploy on Azure API Gateway: deploy-and-publish/federated-gateways/azure/deploy-on-azure-api-gateway.md
                     - Discover APIs on Azure API Gateway: deploy-and-publish/federated-gateways/azure/discover-apis-on-azure-api-gateway.md
+                  - EnvoyGateway:
+                    - Discover APIs on Envoy Gateway: manage-apis/deploy-and-publish/federated-gateways/EnvoyGateway/eg-k8s/discover-apis-on-eg-gateway-in-kubernetes.md
                   - Kong:
                     - Kong Kubernetes:
                         - Discover APIs on Kong Gateway in Kubernetes: manage-apis/deploy-and-publish/federated-gateways/kong/kong-kubernetes/discover-apis-on-kong-gateway-in-kubernetes.md
