--- a/en/docs/reference/product-apis/admin-apis/admin-v4/admin-v4.yaml
+++ b/en/docs/reference/product-apis/admin-apis/admin-v4/admin-v4.yaml
@@ -100,7 +100,7 @@ info:
     * Make sure you have an API Manager instance up and running.
     * Update the `basepath` parameter to match the hostname and port of the APIM instance.
      
-     <a href="../../../../../assets/attachments/reference/admin-v4.3-postman-collection.json"
+     <a href="../../../../../assets/attachments/reference/admin-v4.4-postman-collection.json"
      download="WSO2 API Manager 4.5.0 Admin REST API.postman_collection.json"
      style="display: inline-block; padding: 10px 15px; color: white; background-color: #ef5b25; text-align: center; text-decoration: none; border-radius: 5px;font-weight: bold;">
      Download Postman Collection
@@ -1911,6 +1911,7 @@ paths:
       operationId: getLLMProviders
 
     post:
+      deprecated: true
       tags:
         - LLMProviders
       summary: Add a LLM provider
