add config changes for synapse artifact generation.

--- a/en/tools/config-catalog-generator/data/apim.key_manager.toml
+++ b/en/tools/config-catalog-generator/data/apim.key_manager.toml
@@ -7,3 +7,4 @@ pool.max_idle = 100
 key_validation_handler_type = "default"
 key_validation_handler_type = "custom"
 key_validation_handler_impl = "org.wso2.carbon.apimgt.keymgt.handlers.DefaultKeyValidationHandler"
+enable_revoked_token_event_validation = false
