--- a/en/tools/config-catalog-generator/data/configs.json
+++ b/en/tools/config-catalog-generator/data/configs.json
@@ -1072,6 +1072,14 @@
                             "default": "false",
                             "possible": "true,false",
                             "description": "Enable the application scopes for the Resident Key Manager."
+                        },
+                        {
+                            "name": "disable_retrieve_key_mapping",
+                            "type": "boolean",
+                            "required": false,
+                            "default": "false",
+                            "possible": "true,false",
+                            "description": "Disables the retrieval of key mapping from the internal API when subscription validation is disabled."
                         }
                     ]
                 },
@@ -6382,7 +6390,48 @@
             ],
             "exampleFile": "databridge.toml"
         },
-      {
+        {
+            "title": "API-M Basic auth configurations",
+            "options": [
+                {
+                    "name": "apim.basic_authenticator",
+                    "required": false,
+                    "description": "This includes configuration for basic authenticator client pool mechanism to access Axis2 services. The client pool prevents intermittent 500 server errors by managing client connections efficiently.",
+                    "params": [
+                        {
+                            "name": "init_idle_capacity",
+                            "type": "integer",
+                            "required": false,
+                            "default": "20",
+                            "description": "Initial number of idle connections to maintain in the client pool."
+                        },
+                        {
+                            "name": "max_idle",
+                            "type": "integer",
+                            "required": false,
+                            "default": "50",
+                            "description": "Maximum number of idle connections that can be maintained in the pool."
+                        },
+                        {
+                            "name": "max_active",
+                            "type": "integer",
+                            "required": false,
+                            "default": "100",
+                            "description": "Maximum number of active connections that can be allocated from the pool at any given time."
+                        },
+                        {
+                            "name": "max_wait_millis",
+                            "type": "integer",
+                            "required": false,
+                            "default": "30000",
+                            "description": "Maximum time (in milliseconds) to wait for a connection from the pool when the pool is exhausted."
+                        }
+                    ]
+                }
+            ],
+            "exampleFile": "basic_authenticator.toml"
+        },
+        {
         "title": "OAuth token endpoint trust store configurations",
         "options": [
           {
