--- a/en/tools/config-catalog-generator/data/apim.analytics.toml
+++ b/en/tools/config-catalog-generator/data/apim.analytics.toml
@@ -4,6 +4,6 @@ type = "moesif"
 
 [apim.analytics.properties]
 moesifKey = "estY2FtcGxlLW1vZXNpZi1rZXk="
-moesif_base_url = "https://api.moesif.com"
+moesif_base_url = "https://api.moesif.net"
 send_headers = false
 build_response_message = false
