--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -1238,6 +1238,6 @@ extra:
             version: 1.2.0-1
             git_tag: v1.2.0.1
     site_version: 4.6.0
-    base_path: http://localhost:8000/en/4.6.0
-    # base_path: https://apim.docs.wso2.com/en/4.6.0
+    #base_path: http://localhost:8000/en/4.6.0
+    base_path: https://apim.docs.wso2.com/en/4.6.0-revamp
     envoy_path: https://www.envoyproxy.io/docs/envoy/v1.24.1
