--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -1234,6 +1234,6 @@ extra:
             version: 1.2.0-1
             git_tag: v1.2.0.1
     site_version: 4.6.0
-    #base_path: http://localhost:8000/en/4.6.0
-    base_path: https://apim.docs.wso2.com/en/4.6.0-revamp
+    base_path: https://25bc976e-1680-484f-949a-e4977b70617d.e1-eu-west-cdp.choreoapps.dev/en/4.6.0
+    #base_path: https://apim.docs.wso2.com/en/4.6.0
     envoy_path: https://www.envoyproxy.io/docs/envoy/v1.24.1
