--- a/.github/workflows/gh-deploy.yml
+++ b/.github/workflows/gh-deploy.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Setup Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.x'
+        python-version: '3.11'
         
     - name: Install dependencies
       run: |
@@ -31,4 +31,6 @@ jobs:
     - name: Deploy to GitHub Pages
       run: |
         cd en
-        mkdocs gh-deploy --clean --message "Deploy from GitHub Actions"
+        mkdocs build --clean
+        touch site/.nojekyll
+        mkdocs gh-deploy --clean --ignore-version --message "Deploy from GitHub Actions with .nojekyll fix"
