--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -390,34 +390,48 @@ nav:
                 - JMX-Based Monitoring: monitoring/observability/metrics/jmx-based-monitoring.md
 
     - Key Manager:
-        - Key Management Concepts:
-            - Overview: key-manager/key-manager-overview.md
-        - OAuth2:
-            - Access Token Types:
-                - JWT Tokens: key-manager/oauth2/access-token-types/jwt-tokens.md
-            - Encrypting OAuth2 Tokens: key-manager/oauth2/encrypting-oauth2-tokens.md
+        - Overview: key-manager/key-manager-overview.md
+        - Authentication:
             - Grant Types:
-                - Overview: key-manager/oauth2/grant-types/overview.md
-                - Password Grant: key-manager/oauth2/grant-types/password-grant.md
-                - Client Credentials Grant: key-manager/oauth2/grant-types/client-credentials-grant.md
-                - Authorization Code Grant: key-manager/oauth2/grant-types/authorization-code-grant.md
-                - Refresh Token Grant: key-manager/oauth2/grant-types/refresh-token-grant.md
-                - JWT Grant: key-manager/oauth2/grant-types/jwt-grant.md
-                - SAML Extension Grant: key-manager/oauth2/grant-types/saml-extension-grant.md
-                - Kerberos OAuth2 Grant: key-manager/oauth2/grant-types/kerberos-oauth2-grant.md
-                - NTLM Grant: key-manager/oauth2/grant-types/ntlm-grant.md
-            - Hashing OAuth Keys: key-manager/oauth2/hashing-oauth-keys.md
-            - Multiple Active Access Tokens: key-manager/oauth2/multiple-active-access-tokens.md
+                - Overview: key-manager/authentication/grant-types/overview.md
+                - Password Grant: key-manager/authentication/grant-types/password-grant.md
+                - Client Credentials Grant: key-manager/authentication/grant-types/client-credentials-grant.md
+                - Authorization Code Grant: key-manager/authentication/grant-types/authorization-code-grant.md
+                - Refresh Token Grant: key-manager/authentication/grant-types/refresh-token-grant.md
+                - JWT Grant: key-manager/authentication/grant-types/jwt-grant.md
+                - SAML Extension Grant: key-manager/authentication/grant-types/saml-extension-grant.md
+                - Kerberos OAuth2 Grant: key-manager/authentication/grant-types/kerberos-oauth2-grant.md
+                - NTLM Grant: key-manager/authentication/grant-types/ntlm-grant.md
             - OAuth2 Scopes:
-                - Scope Whitelisting: key-manager/oauth2/oauth2-scopes/scope-whitelisting.md
-            - Provisioning Out-of-Band OAuth Clients: key-manager/oauth2/provisioning-out-of-band-oauth-clients.md
-            - Securing OAuth Token with HMAC Validation: key-manager/oauth2/securing-oauth-token-with-hmac-validation.md
-            - Token Expiration: key-manager/oauth2/token-expiration.md
-            - Token Persistence: key-manager/oauth2/token-persistence.md
-            - Token Revocation: key-manager/oauth2/token-revocation.md
-            - Federating OAuth Applications: key-manager/oauth2/federating-oauth-applications.md
-        - OpenID Connect:
-            - Obtain User Profile Information with OpenID Connect: key-manager/openid-connect/obtaining-user-profile-information-with-openid-connect.md
+                - Fine-grained Access Control with OAuth Scopes: key-manager/authentication/oauth2-scopes/fine-grained-access-control-with-oauth-scopes.md
+                - Scope Whitelisting: key-manager/authentication/oauth2-scopes/scope-whitelisting.md
+        - Tokens:
+            - JWT Tokens: key-manager/tokens/jwt-tokens.md
+            - Token Expiration: key-manager/tokens/token-expiration.md
+            - Token Persistence: key-manager/tokens/token-persistence.md
+            - Token Revocation: key-manager/tokens/token-revocation.md
+            - Encrypting OAuth2 Tokens: key-manager/tokens/encrypting-oauth2-tokens.md
+            - Hashing OAuth Keys: key-manager/tokens/hashing-oauth-keys.md
+            - Multiple Active Access Tokens: key-manager/tokens/multiple-active-access-tokens.md
+            - Securing OAuth Token with HMAC Validation: key-manager/tokens/securing-oauth-token-with-hmac-validation.md
+        - Applications:
+            - Provisioning Out-of-Band OAuth Clients: key-manager/applications/provisioning-out-of-band-oauth-clients.md
+            - Federating OAuth Applications: key-manager/applications/federating-oauth-applications.md
+        - Identity:
+            - Obtain User Profile Information with OpenID Connect: key-manager/identity/obtaining-user-profile-information-with-openid-connect.md
+        - Third-Party Key Managers:
+            - Overview: key-manager/third-party-key-managers/overview.md
+            - Configure WSO2 IS as a Key Manager: key-manager/third-party-key-managers/configure-wso2is-connector.md
+            - Configure WSO2 IS 7.x as a Key Manager: key-manager/third-party-key-managers/configure-wso2is7-connector.md
+            - Configure Keycloak as a Key Manager: key-manager/third-party-key-managers/configure-keycloak-connector.md
+            - Configure Okta as a Key Manager: key-manager/third-party-key-managers/configure-okta-connector.md
+            - Configure Auth0 as a Key Manager: key-manager/third-party-key-managers/configure-auth0-connector.md
+            - Configure PingFederate as A Key Manager: key-manager/third-party-key-managers/configure-pingfederate-connector.md
+            - Configure ForgeRock as a Key Manager: key-manager/third-party-key-managers/configure-forgerock-connector.md
+            - Configure a Custom Key Manager: key-manager/third-party-key-managers/configure-custom-connector.md
+            - Configure the Global Key Manager: key-manager/third-party-key-managers/configure-global-key-manager.md
+            - Configure the Azure AD as a Key Manager: key-manager/third-party-key-managers/configure-azure-ad-key-manager.md
+            - Application Scopes: key-manager/third-party-key-managers/application-scopes.md
 
     - Admin Portal:
         - Administer Overview: administer/admin-overview.md
@@ -443,19 +457,6 @@ nav:
         - Multiple Gateways:
               - Configure a Gateway: administer/multiple-gateways/configure-gateway.md
               - Configure Gateway Visibility: administer/multiple-gateways/configure-gateway-visibility.md
-        - Key Managers:
-            - Overview: administer/key-managers/overview.md
-            - Configure WSO2 IS as a Key Manager: administer/key-managers/configure-wso2is-connector.md
-            - Configure WSO2 IS 7.x as a Key Manager: administer/key-managers/configure-wso2is7-connector.md
-            - Configure Keycloak as a Key Manager: administer/key-managers/configure-keycloak-connector.md
-            - Configure Okta as a Key Manager: administer/key-managers/configure-okta-connector.md
-            - Configure Auth0 as a Key Manager: administer/key-managers/configure-auth0-connector.md
-            - Configure PingFederate as A Key Manager: administer/key-managers/configure-pingfederate-connector.md
-            - Configure ForgeRock as a Key Manager: administer/key-managers/configure-forgerock-connector.md
-            - Configure a Custom Key Manager: administer/key-managers/configure-custom-connector.md
-            - Configure the Global Key Manager: administer/key-managers/configure-global-key-manager.md
-            - Configure the Azure AD as a Key Manager: administer/key-managers/configure-azure-ad-key-manager.md
-            - Application Scopes: administer/key-managers/application-scopes.md
         - Advanced Configurations: administer/advanced-configurations.md
         - Manage Role based access control for the Admin portal: administer/role-based-access-control.md
         - Rate Limiting:
