--- a/.github/workflows/gh-deploy.yml
+++ b/.github/workflows/gh-deploy.yml
@@ -1,17 +1,30 @@
-name: Deploy MkDocs with gh-deploy
+name: Deploy MkDocs to GitHub Pages
 
 on:
   push:
     branches: [ "4.6.0" ]
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
   deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-      with:
-        fetch-depth: 0  # Fetch full history for gh-deploy
       
     - name: Setup Python
       uses: actions/setup-python@v4
@@ -23,14 +36,19 @@ jobs:
         cd en
         pip install -r requirements.txt
         
-    - name: Configure Git
-      run: |
-        git config --global user.name "GitHub Actions"
-        git config --global user.email "actions@github.com"
-        
-    - name: Deploy to GitHub Pages
+    - name: Build MkDocs site
       run: |
         cd en
         mkdocs build --clean
-        touch site/.nojekyll
-        mkdocs gh-deploy --clean --ignore-version --message "Deploy from GitHub Actions with .nojekyll fix"
+        
+    - name: Setup Pages
+      uses: actions/configure-pages@v4
+      
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v3
+      with:
+        path: './en/site'
+        
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v4
