change home title.

--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -69,7 +69,7 @@ theme:
 strict: false
 # Navigation
 nav:
-    - Documentation: index.md
+    - Home: index.md
     - Get Started:
           - Overview: get-started/overview.md
           - Key Concepts: get-started/key-concepts.md
