Add nav bar changes

--- a/en/mkdocs-component-based.yml
+++ b/en/mkdocs-component-based.yml
@@ -4,7 +4,7 @@
 
 # Navigation structure organized by platform components
 nav:
-    - Documentation: index.md
+    - Home: index.md
     - Get Started:
           - Overview: get-started/overview.md
           - Key Concepts: get-started/key-concepts.md
