--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -1433,8 +1433,8 @@ extra:
             version: 1.2.0-1
             git_tag: v1.2.0.1
     site_version: 4.6.0
-    #base_path: https://dushaniw.github.io/docs-apim
-    base_path: http://localhost:8000/docs-apim
+    base_path: https://dushaniw.github.io/docs-apim
+    #base_path: http://localhost:8000/docs-apim
     envoy_path: https://www.envoyproxy.io/docs/envoy/v1.24.1
     redoc_theme: '{
         "colors": {
